--- a/Style/style.css
+++ b/Style/style.css
@@ -119,6 +119,164 @@ header{
     font-family: "Work Sans, sans-serif";
     font-weight: bolder;
 }
+.facts {
+    max-width: 1440px;
+    margin: 0 auto;
+  
+    
+}
+.facts p{
+    color: #727272;
+    font-size: 1rem;
+    font-weight: 300;
+    margin-bottom: 100px;
+}
+.facts-cards {
+   display: grid;
+   grid-template-columns: repeat(4,1fr);
+}
+.facts-card{
+    border: 3px solid #FF900E;
+    width: 250px;
+     height: 250px; 
+   flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    border-radius:8px;
+  
+}
+.fact-head{
+    color: #424242;
+    font-weight: 600;
+   
+}
+.fact-dis{
+    color: #727272;
+    font-weight: 600;
+    
+}
+.facts-card  h3{
+    
+    color: rgb(66, 66, 66);
+font-family: Work Sans;
+font-size: 2.8rem;
+font-weight: 600;
+margin-top: 10px;
+
+}
+
+.facts-card  h5{
+
+color: rgb(114, 114, 114);
+font-family: Work Sans;
+font-size: 1.2rem;
+font-weight: 600;
+margin-top: 5px;
+}
+.facts-content{
+    max-width: 542px;
+}
+.sponsor-content{
+   max-width: 540px;
+   margin: 50px auto;
+   text-align: center;
+}
+.sponsor-content-heading{
+    color: rgb(19, 19, 19);
+font-family: Work Sans;
+font-size: 2.8rem;
+font-weight: 700;
+line-height: 53px;
+letter-spacing: 0%;
+
+}
+.sponsor-content-para{
+    color: rgb(114, 114, 114);
+font-family: Work Sans;
+font-size: 1rem;
+font-weight: 400;
+line-height: 26px;
+letter-spacing: 0%;
+text-align: center;
+}
+.sponsor-img{
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
+    justify-content: center;
+    justify-items: center;
+}
+.sponsor-img img{
+    filter: grayscale(100%);
+}
+.features{
+    margin: 0 auto;
+    max-width: 1440px;
+    margin-bottom: 50px;
+    gap: 140px;
+}
+.feature-info-head{
+border-left: 5px solid #FF900E;
+ padding-left: 21px;
+color: rgb(19, 19, 19);
+font-family: Work Sans;
+font-size: 2.8rem;
+font-weight: 700;
+
+
+}
+.feature-info-para{
+    color: rgb(114, 114, 114);
+font-family: Work Sans;
+font-size: 1rem;
+font-weight: 400;
+
+
+
+}
+.feature-box{
+border-radius: 8px;
+box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
+background: rgb(255, 255, 255);
+margin-bottom: 20px;
+padding: 20px;
+}
+/* .feature-box-info{
+    padding: 30px
+} */
+.feature-box h2{
+color: rgb(19, 19, 19);
+font-family: Work Sans;
+font-size: 1.2rem;
+font-weight: 600;
+line-height: 23px;
+letter-spacing: 0%;
+
+
+}
+.feature-box p{
+    color: rgb(114, 114, 114);
+font-family: Work Sans;
+font-size: 1rem;
+font-weight: 400;
+line-height: 26px;
+letter-spacing: 0%;
+
+}
+#experience-btn{
+    padding: 46px;
+    font-size: 1.2rem;
+    font-weight: 500;
+    margin-left: -92px;
+    margin-top: -77px;
+}
+#year{
+ font-size: 3rem;
+ font-weight: bold;
+}
+.features img{
+    width: 100%;
+}
 
 @media screen and (max-width:576px) {
     .nav-itmes,.navbar,.main{
@@ -127,9 +285,65 @@ header{
     .main-img-container{
         grid-template-columns: repeat(1,1fr);
     }
+    .sponsor-img{
+        grid-template-columns: repeat(1,1fr);
+        gap: 24px;
+    }
+    .facts-cards{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        justify-items: center;
+        gap: 24px;
+        
+
+    }
+    .facts-card{
+        justify-items: center;
+
+    }
+    .features{
+        flex-direction: column;
+    }
+    
+#experience-btn{
+    margin: 0;
+   
+}
+   
+}
+footer{
+text-align: center;
+background-color: rgb(255, 244, 231);
+max-width: 1440px;
+height: 100px;
+margin: 0 auto;
+display: flex;
+align-items: center;
+justify-content: center;
+margin-top: 50px;
+}
+footer p{
+    color: rgb(66, 66, 66);
+    font-family: Work Sans;
+    font-size: 1.2rem;
+    font-weight: 400;
+
+   
 }
 @media screen and (min-width:576px) and (max-width:992px) {
     .main{
         flex-direction: column;
+    }
+    .facts-cards{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        gap: 20px;
+        justify-items: center;
+
+    }
+    
+    .sponsor-img{
+        grid-template-columns: repeat(2,1fr);
+        gap: 24px;
     }
 }
